syntax = "proto3";
option csharp_namespace = "XtraUpload.Protos";
import "domain/gUploadOptions.proto";
import "domain/gRequestStatus.proto";
import "domain/gHardwareOptions.proto";

package gstoragemanager;

// The server storage service definition.
service gStorageManager {
	rpc GetUploadOptions (stream UploadOptsResponse) returns (stream UploadOptsRequest);
	rpc CheckConnectivity (stream ConnectivityResponse) returns (stream ConnectivityRequest);
	rpc GetHardwareOptions (stream HardwareOptsResponse) returns (stream HardwareOptsRequest);
}

message UploadOptsResponse {
	gUploadOptions uploadOptions = 1;
	string serverAddress = 2;
}

message UploadOptsRequest {
  string serverAddress = 1;
}

message ConnectivityRequest {
  string serverAddress = 1;
}

message ConnectivityResponse {
	gRequestStatus status = 1;
}

message HardwareOptsResponse {
	gHardwareOptions hardwareOptions = 1;
	string serverAddress = 2;
}
message HardwareOptsRequest {
	string serverAddress = 1;
}